[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/tests",
]

[project]
dynamic = ["version"]
name = "xasyncio"
authors = [
    { name="Yisu Peng", email="yisupeng@gmail.com" },
]
description = "A package to simiplify multithreaded asyncio event loops"
#readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/shawn-peng/xasyncio"
"Bug Tracker" = "https://github.com/shawn-peng/xasyncio/issues"

#[tool.hatch.build.targets.wheel]
#packages = ["src/asyncio-utils"]

